--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.30.0
-ultralytics==8.0.163
-Pillow==9.5.0
-opencv-python==4.8.1.78
+streamlit==1.48.1
+ultralytics==8.3.183
+Pillow==10.0.0
+opencv-python-headless==4.8.1.78
 
 
 
